--- a/config/packages/swiftmailer.yaml
+++ b/config/packages/swiftmailer.yaml
@@ -1,3 +1,5 @@
 swiftmailer:
+    delivery_addresses: 
+        - 'pedr1ferre@gmail.com'
     url: '%env(MAILER_URL)%'
     spool: { type: 'memory' }
