--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -3,4 +3,4 @@ twig:
     form_themes:
         - 'bootstrap_4_layout.html.twig'
     globals:
-        portfolios: '@App\Service\AllCollections'
+        albums: '@App\Service\AllCollections'
