--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,5 +36,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/back, roles: ROLE_ADMIN }
+        - { path: ^/back, roles: [IS_AUTHENTICATED_FULLY, ROLE_ADMIN] }
         # - { path: ^/profile, roles: ROLE_USER }
