--- a/config/packages/swiftmailer.yaml
+++ b/config/packages/swiftmailer.yaml
@@ -1,5 +1,19 @@
+# swiftmailer:
+#     delivery_addresses: 
+#         - 'pedr1ferre@gmail.com'
+#     url: '%env(MAILER_URL)%'
+#     spool: { type: 'memory' }
 swiftmailer:
-    delivery_addresses: 
-        - 'pedr1ferre@gmail.com'
-    url: '%env(MAILER_URL)%'
+    transport:        gmail
+    username:         pedr1ferre@gmail.com
+    password:         Tud0.B3m
+    host:             localhost
+    port:             465
+    encryption:       ssl
+    auth-mode:        login
     spool: { type: 'memory' }
+    stream_options:
+        ssl:
+            allow_self_signed: true
+            verify_peer: false
+            verify_peer_name: false 
